--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
     <div id="progress"></div>
     <div id="navbar">
       <ul>
-        <li class="active"><a id="Nhome" href="#">Home</a></li>
-        <li><a id="Nabout" href="#">About</a></li>
-        <div><img src="/images/logo.png" alt="Logo"></div>
-        <li><a id="Nportfolio" href="#">Portfolio</a></li>
-        <li><a id="Ncontact" href="#">Contact</a></li>
+        <li class="active">
+          <a id="Nhome" href="#" data-target="#home" data-prog="20%">Home</a>
+        </li>
+        <li>
+          <a id="Nabout" href="#" data-target="#about" data-prog="40%">About</a>
+        </li>
+        <span><img src="/images/logo.png" alt="Logo"></span>
+        <li>
+          <a id="Nportfolio" href="#" data-target="#portfolio" data-prog="80%">Portfolio</a>
+        </li>
+        <li>
+          <a id="Ncontact" href="#" data-target="#contact" data-prog="100%">Contact</a>
+        </li>
       </ul>
     </div>
   </nav>
-  <section id="home">
+  <section id="home" class="activeSection">
     <div>
       <h1>Foyez Ahmed</h1>
       <h2>a web designer and developer.</h2>
@@ -47,6 +55,6 @@
     <h1>contact</h1>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="/js/app.min.js"></script>
 </body>
 </html>
